hphp/hack/test/sound_dynamic/typing/completeness_bugs/variadic_param_callee.bad.php
<?hh

<<__SupportDynamicType>>
function f(vec<int> $is): void {
  g(...$is);
}

<<__SupportDynamicType>>
function g(int ...$cs): void {}
